# ReddiCompass

./: .gitignore  MANIFEST.in  README.md  __init__.py  default_config.py  pyproject.toml  requirements.txt  setup.py  utils.py
data/: training_set_means.pkl
data/lexicon/: vader_lexicon.txt
data/rundata/models/.default/horizontal/: scaler.joblib
data/rundata/models/.default/vertical/: tfidf_extractor.joblib
features_extraction_and_classification/: contextual_features_extraction.py  default_resources.py  feature_extraction.py  io_utils.py  main.py
rundata/models/.default/: tfidf_extractor.joblib
rundata/models/.default/horizontal/: grid_search_lr.joblib  grid_search_svc.joblib
rundata/models/.default/horizontal/predictions/0/: predictions.pkl  texts.pkl
rundata/models/.default/vertical/: model.joblib  tfidf_extractor.joblib
rundata/models/global/: meta.json  texts.parquet
rundata/models/horizontal/whole/no_undersampling/predictions/0/: features.parquet
rundata/models/vertical/whole/no_undersampling/: grid_search_lr.joblib  grid_search_svc.joblib
src/: default_config.py  utils.py
src/ReddiCompass/: cli.py  default_config.py  download_utils.py  utils.py
src/ReddiCompass/Moral_Foundations_Frameaxis/: aggregate_account_scores.py  frameAxis.py
src/ReddiCompass/Moral_Foundations_Frameaxis/moral_foundation_dictionaries/: customized.csv  eMFD_wordlist.csv  mfd2.txt
src/ReddiCompass/data/rundata/models/.default/: model.joblib  pipeline.joblib
src/ReddiCompass/data/rundata/models/.default/horizontal/: features_extractor.joblib  pipeline.joblib  tfidf_extractor.joblib
src/ReddiCompass/data/rundata/models/.default/vertical/: features_extractor.joblib  pipeline.joblib  scaler.joblib  tfidf_extractor.joblib
src/ReddiCompass/features_extraction_and_classification/: contextual_features_extraction.py  default_resources.py  feature_extraction.py  io_utils.py  main.py  model_pipeline.py  resume_utils.py  tfidf_utils.py  validate_utils.py
src/ReddiCompass/test/: test_extract_features.py  test_pipeline.py  test_training.py
src/ReddiCompass/text_processing/: LexiconMatcher.py  raw_text_features_extraction.py  text_filtering_utils.py  text_replacement.py  text_utils.py  textractor.py  vad_socialness_scoring.py
src/features_extraction_and_classification/: contextual_features_extraction.py  default_resources.py  feature_extraction.py  io_utils.py  main.py  model_pipeline.py  resume_utils.py  tfidf_utils.py  validate_utils.py
src/text_processing/: LexiconMatcher.py  myText.py  text_replacement.py  textractor.py
text_processing/: vad_socialness_scoring.py
