[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
include = ["ReddiCompass*", "ReddiCompass.*"]#, "ReddiCompass.text_processing", "ReddiCompass.features_extraction_and_classification"]


[project]
name = "ReddiCompass"
version = "0.1.0"
description = "A package for tailored text processing, feature extraction and text classification from Social Media texts"
readme = {file = "README.md", content-type = "text/markdown"}

authors = [
{name="Giuseppe Onesto", email = "onesto.giuseppe@gmail.com"}
]
#py_modules = ["default_config.py", "utils.py", "download_utils.py"]
requires-python = ">=3.7,<3.12"

dependencies = [
    "numpy==1.24.4",
    "pandas==1.5.3",
	 "scipy==1.10.1",
    "scikit-learn==1.6.1",
	"nltk==3.9.1",
]

keywords = ["reddit", "SMN", "social", "network", "NLP", "PoliticalCompass", "TexTractor", "text", "extraction", "language", "natural", "twitter", "hashtag", "emoji", "mention", "lexicon", "lexical", "textual", "feature"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/honestus/ReddiCompass"


